--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ env:
 gemfile:
   - Gemfile
 before_script:
-  - ./start_local_popit_api.bash
+  - ./start-local-writeit.bash
   - bundle install --without production
