--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ env:
 gemfile:
   - Gemfile
 before_script:
+  - pip install virtualenv
   - ./start-local-writeit.bash
   - bundle install --without production
